# smart-test-data-generator

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/: requirements.txt  test_data_generation.py  test_exporters.py  test_quality_reporter.py  test_schema_parsing.py  test_validation.py
src/smart_tdg/cli/: cli_main.py
src/smart_tdg/core/: data_generator.py  fk_utils.py  learned_data_generator.py  scenario_engine.py  schema_ingestion.py
src/smart_tdg/exporters/: __init__.py  db_loaders.py  file_exporters.py  sql_exporters.py
src/smart_tdg/generators/: rule_based.py
src/smart_tdg/models/: scenario_models.py  schema_models.py
src/smart_tdg/parsers/: openapi_parser.py  sql_parser.py
src/smart_tdg/reporter/: quality_reporter.py
src/smart_tdg/utils/: config.py  graph_utils.py
tests/: test_learned_generation.py  test_validation_sampled.py
