[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-test-data-generator"
version = "0.1.0"
description = "AI-powered test data generation with schema inference and ML-based synthesis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["test-data", "synthetic-data", "data-generation", "qa", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Schema Parsing
    "simple-ddl-parser>=0.32.0",
    "openapi-schema-validator>=0.6.2",
    "sqlparse>=0.4.4",
    
    # Data Generation
    "faker>=20.1.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0",
    
    # ML-based Generation
    "sdv>=1.8.0",
    
    # Caching (DiskCache)
    "diskcache>=5.6.3",
    
    # File Formats
    "pyarrow>=14.0.0",
    "fastavro>=1.9.0",
    
    # Database Connectivity
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pymongo>=4.6.0",
    
    # LLM Integration
    "llama-index>=0.9.18",
    "ollama>=0.1.6",
    
    # YAML Processing
    "pyyaml>=6.0.1",
    
    # Statistics & Validation
    "scipy>=1.11.4",
    "hypothesis>=6.92.0",
    
    # CLI & Utilities
    "click>=8.1.7",
    "colorama>=0.4.6",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
smart-tdg = "smart_tdg.cli.main:cli"

[project.urls]
Homepage = "https://github.com/akhilesh-bitwise/smart-test-data-generator.git"
Documentation = "https://github.com/akhilesh-bitwise/smart-test-data-generator.git/docs"
Repository = "https://github.com/akhilesh-bitwise/smart-test-data-generator.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["smart_tdg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=smart_tdg --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
