[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-test-data-generator"
version = "0.1.0"
description = "AI-powered test data generation with schema inference and ML-based synthesis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["test-data", "synthetic-data", "data-generation", "qa", "testing"]

dependencies = [
    # Schema Parsing
    "simple-ddl-parser>=1.7.1",
    "sqlparse>=0.5.3",
    
    # Data Generation
    "faker>=37.12.0",
    "numpy>=2.3.4",
    "pandas>=2.2.3",
    
    # ML-based Generation
    "sdv>=1.28.0",
    "ctgan>=0.11.1",
    
    # Caching
    "diskcache>=5.6.3",
    
    # File Formats
    "pyarrow>=22.0.0",
    "fastavro>=1.12.1",
    
    # Database Connectivity
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.3",
    
    # LLM Integration
    "openai>=1.109.1",
    "litellm>=1.79.1",
    "llama-index>=0.14.7",
    
    # YAML Processing
    "pyyaml>=6.0.3",
    
    # Statistics & Validation
    "scipy>=1.16.3",
    "hypothesis>=6.92.0",
    
    # CLI & Utilities
    "click>=8.3.0",
    "colorama>=0.4.6",
    "tqdm>=4.67.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
]

[project.scripts]
smart-tdg = "smart_tdg.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/smart-test-data-generator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["smart_tdg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=smart_tdg --cov-report=html"

[tool.black]
line-length = 100
